--- a/.gitignore
+++ b/.gitignore
@@ -5,10 +5,12 @@
 /.pnp
 .pnp.*
 .yarn/*
+.yarn.lock
 !.yarn/patches
 !.yarn/plugins
 !.yarn/releases
 !.yarn/versions
+.package-lock.json
 
 # testing
 /coverage
