--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev & sleep 1 && (open http://localhost:3000 || xdg-open http://localhost:3000 || start http://localhost:3000)",
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
