--- a/.gitignore
+++ b/.gitignore
@@ -5,11 +5,11 @@
 /.pnp
 .pnp.*
 .yarn/*
-.yarn.lock
 !.yarn/patches
 !.yarn/plugins
 !.yarn/releases
 !.yarn/versions
+yarn.lock
 package-lock.json
 
 # testing
