--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@eslint/eslintrc": "^3",
     "@swc/core": "^1.11.13",
     "@swc/jest": "^0.2.37",
+    "@testing-library/dom": "^10.4.0",
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.2.0",
     "@testing-library/user-event": "^14.6.1",
